// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Supermarket applies five for amount discount 1`] = `
"toothpaste                          8.95
  1.79 * 5
5 for 7.49(toothpaste)             -1.46

Total:                              7.49"
`;

exports[`Supermarket applies multiple offers 1`] = `
"toothbrush                          2.97
  0.99 * 3
cherry tomatoes                     2.07
  0.69 * 3
3 for 2(toothbrush)                -0.99
2 for 0.99(cherry tomatoes)        -0.39

Total:                              3.66"
`;

exports[`Supermarket applies ten percent discount 1`] = `
"rice                                2.49
10% off(rice)                      -0.25

Total:                              2.24"
`;

exports[`Supermarket applies three for two discount 1`] = `
"toothbrush                          2.97
  0.99 * 3
3 for 2(toothbrush)                -0.99

Total:                              1.98"
`;

exports[`Supermarket applies twenty percent discount 1`] = `
"apples                              1.99
20% off(apples)                    -0.40

Total:                              1.59"
`;

exports[`Supermarket applies two for amount discount 1`] = `
"cherry tomatoes                     0.69
cherry tomatoes                     0.69
2 for 0.99(cherry tomatoes)        -0.39

Total:                              0.99"
`;

exports[`Supermarket does not apply discount to items not purchased 1`] = `
"toothpaste                          1.79

Total:                              1.79"
`;

exports[`Supermarket does not apply two for amount if 1 item purchased 1`] = `
"cherry tomatoes                     0.69

Total:                              0.69"
`;
